--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url(./vendor/normalize.css);
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +7,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: rgb(88, 91, 91);
+  color: #d5d5d5;
 }
 
 code {
