--- a/src/components/Main/Card/Card.module.css
+++ b/src/components/Main/Card/Card.module.css
@@ -4,6 +4,7 @@
    overflow: hidden;
    cursor: pointer;
    transition: all 0.1s linear;
+   
 }
 
 .card:hover {
@@ -11,7 +12,10 @@
  }
 
 .poster {
-    max-width: 100%;
+    display: block;
+    width: 100%;
+    height: 150px;
+    object-fit: cover;
 }
 
 .description {
@@ -19,13 +23,17 @@
 }
 .name {
     font-size: 24px;
-    margin: 0;    
+    margin: 0;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    width: 85%; 
 }
 
 .info {
     display: flex;
     justify-content: space-between;
-
+    margin-top: 5px;
 }
 
 .date {
