feat: реализовать поиск по названию

--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,15 @@
   padding: 20px;
   box-sizing: border-box;
 }
+
+.functions {
+  margin-top: 20px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.loader-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 50px;
+}
