--- a/src/components/UI/Search/Search.module.css
+++ b/src/components/UI/Search/Search.module.css
@@ -2,10 +2,12 @@
     
 }
 
-.select {
-   
+.input {
+   background: transparent;
+   border: 1px solid #d5d5d5;
+   border-radius: 10px;
+   padding: 5px 10px;
+   outline: none;
+   color: inherit;
 }
 
-.option {
-   
-}
