--- a/src/components/UI/Select/Select.module.css
+++ b/src/components/UI/Select/Select.module.css
@@ -3,9 +3,14 @@
 }
 
 .select {
-   
+    background: transparent;
+    border: 1px solid #d5d5d5;
+    border-radius: 10px;
+    padding: 2px 10px;
+    outline: none;
+    color: inherit;
 }
 
 .option {
-   
+    
 }
