--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,8 @@
   margin-top: 20px;
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 10px;
 }
 
 .loader-container {
