--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -5,6 +5,24 @@
     margin-top: 30px;
 }
 
+@media screen and (max-width: 1000px) {
+    .container {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+@media screen and (max-width: 650px) {
+    .container {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media screen and (max-width: 420px) {
+    .container {
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
+
 .logo {
     font-size: 38px;
     margin: 0;
